bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: unclosed character literal
var mess:string = 'null'
                       ^BDR:1: error: ';' expected but something found.
var mess:string = 'null'
                       ^